<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dialog_common_padding">

    <TextView
        android:id="@+id/tv_pressure_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/til_top_pressure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_common_content_margin"
        android:hint="@string/top_pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pressure_label"
        app:layout_constraintEnd_toStartOf="@id/tv_slash">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_top_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_slash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/slash"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintStart_toEndOf="@id/til_top_pressure"
        app:layout_constraintTop_toTopOf="@id/til_top_pressure"
        app:layout_constraintEnd_toStartOf="@id/til_bottom_pressure"
        app:layout_constraintBottom_toBottomOf="@id/til_top_pressure"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/til_bottom_pressure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/bottom_pressure"
        app:layout_constraintStart_toEndOf="@id/tv_slash"
        app:layout_constraintTop_toTopOf="@id/til_top_pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/til_top_pressure">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_bottom_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_pulse_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_common_content_margin_2x"
        android:text="@string/pulse"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_top_pressure"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/til_pulse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_common_content_margin"
        android:hint="@string/value"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/tv_pulse_label"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_pulse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_common_content_margin"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/til_pulse"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dialog_common_content_margin"
        android:text="@string/cancel"
        app:layout_constraintTop_toTopOf="@id/btn_save"
        app:layout_constraintEnd_toStartOf="@id/btn_save"/>

</androidx.constraintlayout.widget.ConstraintLayout>